# skysniff

./: .gitignore  README.md  pyproject.toml  setup.cfg  weather.py
.github/workflows/: main.yml
skysniff/: __init__.py  __main__.py  cli.py  http.py  nominatim.py  nws.py  version.py
