[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skysniff"
dynamic = ["version"]
authors = [
    {name = "Ellen Marie Dash", email = "me@duckie.co"}
]
description = "Get weather information for a specified address"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

requires-python = ">= 3.11"

[project.urls]
repository = "https://github.com/duckinator/skysniff"

[project.scripts]
skysniff = "skysniff.cli:main"

[tool.hatch.version]
path = "skysniff/__init__.py"

[tool.bork.zipapp]
enabled = true
main = "skysniff.cli:main"
